# market-risk-agent-system

./: Procfile  README.md  README_FULL.txt  pyproject.toml  requirements.txt
crews/: base_agent.py  prompts.py
crews/compliance_crew/: rbi_compliance_agent.py
crews/data_crew/: ingest_agent.py  normalize_agent.py
crews/execution_crew/: limit_agent.py
crews/governance_crew/: drift_agent.py
crews/intelligence_crew/: macro_agent.py
crews/modeling_crew/: factor_model_agent.py  var_agent.py
data/raw/: market_quotes.parquet
data/silver/: market_clean.parquet
frontend/: Dockerfile  app.py  main.py
infra/: config.yaml  kimi_client.py
market_risk_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipelines/: backtest.py  orchestrator.py
schemas/: decision_objects.py
scripts/: publish.sh
tests/: test_backtester.py  test_orchestrator.py
