[project]
name = "market-risk-agent-system"
version = "0.1.0"
description = "Multi-agent market risk prediction system aligned with RBI guidelines."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "scikit-learn>=1.5",
    "requests>=2.32",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",

    "plotly>=5.24",
    "kaleido>=0.2",
    "ruff>=0.5",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.5",
    "torch>=2.3",
    "pytorch-forecasting>=1.0",
    "statsmodels>=0.14",
    "arch>=7.0",
    "pyfolio>=0.9",
    "mlflow>=2.15",
    "great-expectations>=0.18",
    "opentelemetry-api>=1.27",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*", "schemas*", "crews*", "infra*", "tests*", "frontend*"]
